--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,6 +1,6 @@
 /* @import url('https://fonts.googleapis.com/css2?family=Redressed&family=Merriweather:wght@300;400;700&display=swap'); */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,600;1,500;1,700&display=swap');
-@import url('https://fonts.googleapis.com/css2? family= Nuosu+SIL & display=swap');
+/* @import url('https://fonts.googleapis.com/css2? family= Nuosu+SIL & display=swap'); */
 
 @import url('https://fonts.googleapis.com/css2? family= Roboto:wght@100;500;700 & display=swap');
 
@@ -24,9 +24,13 @@
 	padding-bottom: 20px;
 	border-bottom-color: var(--bs-teal);
 }
+.paragBanner{
+	color: white;
+	letter-spacing: 0.2em;
+}
 .banner,
 .order-form {
-	background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('../images/fond_bg.jpg') center center fixed no-repeat;
+	/* background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('../images/fond_bg.jpg') center center fixed no-repeat; */
 	background-size: cover;
 	height: 800px;
 }
@@ -72,74 +76,10 @@
 }
 /*++++++++++++++++++++Navbar+++++++++++++++++*/
 
-h1{
+h1 , h2{
 	text-align: center;
-	background-color: rgba(0, 0, 0, 0.577);
+	background-color: rgba(192, 188, 188, 0.577);
 }
 .titrePage{
 	text-align: center;
 }
-/*==========================Profession de Foi=============================*/
-.section{
-	height: 100vh;
-}
-#acceuil{
-	display: flex;
-	justify-content: space-between;
-	width: 100%;
-	background-color: rgba(0, 0, 0, 0.413);
-	padding-left: 25px;
-}
-#acceuil a h3{
-	color: white;
-	font-size: 3rem;
-}
-#acceuil a {
-	color: white;
-	font-size: 2rem;
-	text-decoration: none;
-	padding-right: 25px;
-	cursor: pointer;
-}
-#acceuil a:hover {
-	color: white;
-	font-size: 2rem;
-	text-decoration: none;
-	padding-right: 25px;
-	cursor: pointer;
-	transform: scale(1.25);
-}
-/*==========================Eglises=============================*/
-#titreEglise{
-	color: blue;
-	font-size: 3rem;
-	background-color: rgb(69, 66, 66);
-}
-#commentsEglise p{
-	display: flex;
-	margin-left: 50%;
-	top: 15vh;
-	transform: translateX(-50%);
-	width : 50%;
-	height : auto;
-	background-color: rgba(62, 50, 50, 0.164);
-	border: 2px rgb(44, 30, 30);
-	color: blueviolet;
-	animation-duration: 0.5s;
-	animation-name: slidein;
-	transition-timing-function: ease ease-in-out;
-}
-@keyframes slidein {
-from {
-	margin-left: -350%;
-	width: 50%;
-	opacity: 0;
-}
-
-to {
-	margin-left: 0%;
-	width: 100%;
-	opacity: 1;
-}
-}
-
